src/main/antlr/com/antlr/gen/tcjParser.java
// Generated from java-escape by ANTLR 4.11.1
package com.antlr.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class tcjParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		ID=88, STRING=89, WS=90, INT=91, COMMENT=92, LINE_COMMENT=93, XNotAllowed=94;
	public static final int
		RULE_specification = 0, RULE_specBody = 1, RULE_library = 2, RULE_channel = 3, 
		RULE_assertion = 4, RULE_withClause = 5, RULE_definitionRef = 6, RULE_alphabet = 7, 
		RULE_define = 8, RULE_dparameter = 9, RULE_dstatement = 10, RULE_block = 11, 
		RULE_statement = 12, RULE_localVariableDeclaration = 13, RULE_expression = 14, 
		RULE_conditionalOrExpression = 15, RULE_conditionalAndExpression = 16, 
		RULE_conditionalXorExpression = 17, RULE_indexedExpression = 18, RULE_bitwiseLogicExpression = 19, 
		RULE_equalityExpression = 20, RULE_relationalExpression = 21, RULE_additiveExpression = 22, 
		RULE_multiplicativeExpression = 23, RULE_unaryExpression = 24, RULE_arrayExpression = 25, 
		RULE_unaryExpressionNotPlusMinus = 26, RULE_methods_fields_call = 27, 
		RULE_letDefintion = 28, RULE_variableRange = 29, RULE_argumentExpression = 30, 
		RULE_ifExpression = 31, RULE_whileExpression = 32, RULE_recordExpression = 33, 
		RULE_recordElement = 34, RULE_definition = 35, RULE_interleaveExpr = 36, 
		RULE_parallelExpr = 37, RULE_paralDef = 38, RULE_paralDef2 = 39, RULE_internalChoiceExpr = 40, 
		RULE_externalChoiceExpr = 41, RULE_interruptExpr = 42, RULE_hidingExpr = 43, 
		RULE_sequentialExpr = 44, RULE_guardExpr = 45, RULE_timeoutExpr = 46, 
		RULE_withinExpr = 47, RULE_deadlineExpr = 48, RULE_waituntilExpr = 49, 
		RULE_channelExpr = 50, RULE_eventExpr = 51, RULE_caseExpr = 52, RULE_caseCondition = 53, 
		RULE_ifExpr = 54, RULE_ifExprs = 55, RULE_ifBlock = 56, RULE_atomicExpr = 57, 
		RULE_atom = 58, RULE_eventM = 59, RULE_eventList = 60, RULE_eventName = 61;
	private static String[] makeRuleNames() {
		return new String[] {
			"specification", "specBody", "library", "channel", "assertion", "withClause", 
			"definitionRef", "alphabet", "define", "dparameter", "dstatement", "block", 
			"statement", "localVariableDeclaration", "expression", "conditionalOrExpression", 
			"conditionalAndExpression", "conditionalXorExpression", "indexedExpression", 
			"bitwiseLogicExpression", "equalityExpression", "relationalExpression", 
			"additiveExpression", "multiplicativeExpression", "unaryExpression", 
			"arrayExpression", "unaryExpressionNotPlusMinus", "methods_fields_call", 
			"letDefintion", "variableRange", "argumentExpression", "ifExpression", 
			"whileExpression", "recordExpression", "recordElement", "definition", 
			"interleaveExpr", "parallelExpr", "paralDef", "paralDef2", "internalChoiceExpr", 
			"externalChoiceExpr", "interruptExpr", "hidingExpr", "sequentialExpr", 
			"guardExpr", "timeoutExpr", "withinExpr", "deadlineExpr", "waituntilExpr", 
			"channelExpr", "eventExpr", "caseExpr", "caseCondition", "ifExpr", "ifExprs", 
			"ifBlock", "atomicExpr", "atom", "eventM", "eventList", "eventName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#'", "'import'", "';'", "'include'", "'channel'", "'['", "']'", 
			"'assert'", "'|='", "'('", "')'", "'[]'", "'<>'", "'!'", "'?'", "'&&'", 
			"'||'", "'->'", "'<->'", "'/\\'", "'\\/'", "'.'", "'deadlockfree'", "'deterministic'", 
			"'nonterminating'", "'reaches'", "'refines'", "'<F>'", "'<FD>'", "'<T>'", 
			"'with'", "'min'", "'max'", "','", "'alphabet'", "'{'", "'}'", "'define'", 
			"'-'", "'true'", "'false'", "'enum'", "'var'", "'='", "'xor'", "'@'", 
			"'&'", "'|'", "'^'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", 
			"'*'", "'/'", "'%'", "'++'", "'--'", "'call'", "'new'", "'$'", "'hvar'", 
			"':'", "'..'", "'if'", "'else'", "'while'", "'|||'", "'interrupt'", "'\\'", 
			"'timeout'", "'within'", "'deadline'", "'waituntil'", "'->>'", "'case'", 
			"'default'", "'ifa'", "'ifb'", "'atomic'", "'Skip'", "'Stop'", "'Wait'", 
			"'tau'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "ID", "STRING", "WS", "INT", "COMMENT", "LINE_COMMENT", 
			"XNotAllowed"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tcjParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecificationContext extends ParserRuleContext {
		public List<SpecBodyContext> specBody() {
			return getRuleContexts(SpecBodyContext.class);
		}
		public SpecBodyContext specBody(int i) {
			return getRuleContext(SpecBodyContext.class,i);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).enterSpecification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).exitSpecification(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tcjVisitor ) return ((tcjVisitor<? extends T>)visitor).visitSpecification(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecificationContext specification() throws RecognitionException {
		SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_specification);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 13194139533346L) != 0 || _la==T__64 || _la==ID) {
				{
				{
				setState(124);
				specBody();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecBodyContext extends ParserRuleContext {
		public LibraryContext library() {
			return getRuleContext(LibraryContext.class,0);
		}
		public LetDefintionContext letDefintion() {
			return getRuleContext(LetDefintionContext.class,0);
		}
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public AssertionContext assertion() {
			return getRuleContext(AssertionContext.class,0);
		}
		public AlphabetContext alphabet() {
			return getRuleContext(AlphabetContext.class,0);
		}
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public ChannelContext channel() {
			return getRuleContext(ChannelContext.class,0);
		}
		public SpecBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).enterSpecBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).exitSpecBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tcjVisitor ) return ((tcjVisitor<? extends T>)visitor).visitSpecBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecBodyContext specBody() throws RecognitionException {
		SpecBodyContext _localctx = new SpecBodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_specBody);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				library();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				letDefintion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				definition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				assertion();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(134);
				alphabet();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(135);
				define();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(136);
				channel();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LibraryContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(tcjParser.STRING, 0); }
		public LibraryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_library; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).enterLibrary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).exitLibrary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tcjVisitor ) return ((tcjVisitor<? extends T>)visitor).visitLibrary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LibraryContext library() throws RecognitionException {
		LibraryContext _localctx = new LibraryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_library);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(T__0);
				setState(140);
				match(T__1);
				setState(141);
				match(STRING);
				setState(142);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				match(T__0);
				setState(144);
				match(T__3);
				setState(145);
				match(STRING);
				setState(146);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChannelContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tcjParser.ID, 0); }
		public List<AdditiveExpressionContext> additiveExpression() {
			return getRuleContexts(AdditiveExpressionContext.class);
		}
		public AdditiveExpressionContext additiveExpression(int i) {
			return getRuleContext(AdditiveExpressionContext.class,i);
		}
		public ChannelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_channel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).enterChannel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).exitChannel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tcjVisitor ) return ((tcjVisitor<? extends T>)visitor).visitChannel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChannelContext channel() throws RecognitionException {
		ChannelContext _localctx = new ChannelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_channel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(T__4);
			setState(150);
			match(ID);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(151);
				match(T__5);
				setState(152);
				additiveExpression();
				setState(153);
				match(T__6);
				}
			}

			setState(157);
			additiveExpression();
			setState(158);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssertionContext extends ParserRuleContext {
		public List<DefinitionRefContext> definitionRef() {
			return getRuleContexts(DefinitionRefContext.class);
		}
		public DefinitionRefContext definitionRef(int i) {
			return getRuleContext(DefinitionRefContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(tcjParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tcjParser.ID, i);
		}
		public WithClauseContext withClause() {
			return getRuleContext(WithClauseContext.class,0);
		}
		public List<TerminalNode> STRING() { return getTokens(tcjParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(tcjParser.STRING, i);
		}
		public List<TerminalNode> INT() { return getTokens(tcjParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(tcjParser.INT, i);
		}
		public List<TerminalNode> XNotAllowed() { return getTokens(tcjParser.XNotAllowed); }
		public TerminalNode XNotAllowed(int i) {
			return getToken(tcjParser.XNotAllowed, i);
		}
		public AssertionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assertion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).enterAssertion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).exitAssertion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tcjVisitor ) return ((tcjVisitor<? extends T>)visitor).visitAssertion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssertionContext assertion() throws RecognitionException {
		AssertionContext _localctx = new AssertionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assertion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(T__0);
			setState(161);
			match(T__7);
			setState(162);
			definitionRef();
			setState(203);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				{
				setState(163);
				match(T__8);
				setState(180); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(180);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__9:
						{
						setState(164);
						match(T__9);
						}
						break;
					case T__10:
						{
						setState(165);
						match(T__10);
						}
						break;
					case T__11:
						{
						setState(166);
						match(T__11);
						}
						break;
					case T__12:
						{
						setState(167);
						match(T__12);
						}
						break;
					case ID:
					case XNotAllowed:
						{
						setState(168);
						_la = _input.LA(1);
						if ( !(_la==ID || _la==XNotAllowed) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						break;
					case STRING:
						{
						setState(169);
						match(STRING);
						}
						break;
					case T__13:
						{
						setState(170);
						match(T__13);
						}
						break;
					case T__14:
						{
						setState(171);
						match(T__14);
						}
						break;
					case T__15:
						{
						setState(172);
						match(T__15);
						}
						break;
					case T__16:
						{
						setState(173);
						match(T__16);
						}
						break;
					case T__17:
						{
						setState(174);
						match(T__17);
						}
						break;
					case T__18:
						{
						setState(175);
						match(T__18);
						}
						break;
					case T__19:
						{
						setState(176);
						match(T__19);
						}
						break;
					case T__20:
						{
						setState(177);
						match(T__20);
						}
						break;
					case T__21:
						{
						setState(178);
						match(T__21);
						}
						break;
					case INT:
						{
						setState(179);
						match(INT);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(182); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 8387584L) != 0 || (((_la - 88)) & ~0x3f) == 0 && ((1L << (_la - 88)) & 75L) != 0 );
				}
				}
				break;
			case 2:
				{
				setState(184);
				match(T__22);
				}
				break;
			case 3:
				{
				setState(185);
				match(T__23);
				}
				break;
			case 4:
				{
				setState(186);
				match(T__24);
				}
				break;
			case 5:
				{
				setState(187);
				match(T__25);
				setState(188);
				match(ID);
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__30) {
					{
					setState(189);
					withClause();
					}
				}

				}
				break;
			case 6:
				{
				setState(192);
				match(T__26);
				setState(193);
				definitionRef();
				}
				break;
			case 7:
				{
				setState(194);
				match(T__26);
				setState(195);
				match(T__27);
				setState(196);
				definitionRef();
				}
				break;
			case 8:
				{
				setState(197);
				match(T__26);
				setState(198);
				match(T__28);
				setState(199);
				definitionRef();
				}
				break;
			case 9:
				{
				setState(200);
				match(T__26);
				setState(201);
				match(T__29);
				setState(202);
				definitionRef();
				}
				break;
			}
			setState(205);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WithClauseContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public WithClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_withClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).enterWithClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tcjListener ) ((tcjListener)listener).exitWithClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tcjVisitor ) return ((tcjVisitor<? extends T>)visitor).visitWithClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WithClauseContext withClause() throws RecognitionException {
		WithClauseContext _localctx = new WithClauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_withClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			match(T__30);
			setState(208);
			_la = _input.LA(1);
			if ( !(_la==T__31 || _la==T__32) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(209);
			match(T__9);
			setState(210);
			expression();
			setState(211);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
